--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+derive_more = { version = "1.0.0", default-features = false, features = ["display"] }
 diff-enum = "0.1.4"
 thiserror = "1.0.63"
 
